--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -4,7 +4,7 @@
 <h3><%= @cocktail.name %></h3>
 
 <%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail) %>
-<%= link_to "Delete a dose", cocktail_path(cocktail),
+<%= link_to "Delete a dose", dose_path(dose),
       method: :delete,
       data: { confirm: "Are you sure?" } %>
 
